# ros_pepper

./: .gitignore  README.md
call_point_at_prolog/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
call_point_at_prolog/call_point_at_prolog/: build.gradle
call_point_at_prolog/call_point_at_prolog/src/main/java/org/suturo/test/: CallPointAtProlog.java
call_point_at_prolog/gradle/wrapper/: gradle-wrapper.properties
call_point_at_prolog/pepper_point_at_iai/: build.gradle
call_point_at_prolog/pepper_text_to_speech/: build.gradle
call_point_at_prolog/prolog/: init.pl  suturo_prolog_node.pl
pepper_audio_stream/: CMakeLists.txt  package.xml
pepper_audio_stream/scripts/: pepper_audio_stream_publisher.py
pepper_explore/: CMakeLists.txt  package.xml
pepper_explore/scripts/: pepper_explore_node.py  pepper_map_functions.py
pepper_point_at_iai/: CMakeLists.txt  package.xml
pepper_point_at_iai/launch/: pepper_pointAt_teleOp.launch
pepper_point_at_iai/scripts/: pepper_point_at_server.py
pepper_point_at_iai/srv/: PepperPointAt.srv
pepper_text_to_speech/: CMakeLists.txt  package.xml
pepper_text_to_speech/scripts/: pepper_say_server.py
pepper_text_to_speech/srv/: PepperSay.srv
src/pepper_text_to_speech/scripts/: pepper_say_server.py
src/text_to_speech/: CMakeLists.txt  package.xml
